# RPA_init

./: Apresentação.pptx  playwright-log.txt  pyproject.toml
Robots_example/Browsers_examples/: AmazonFirst.robot  AmazonSecond.robot  CampeonatoBrasileiro.robot  ExampleRobot.robot  brasileiraoutil.py
Robots_example/Simple_examples/: FifthExample.robot  FirstExample.robot  FourthExample.robot  SecondExample.robot  ThirdExample.robot  pokemonapi.py
Robots_example/Windows_examples/: Steam_recomendation.robot  log.html  output.xml  report.html
