[project]
name = "rpa-init"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
    "robotframework>=7.4.2",
    "robotframework-browser[bb]>=19.14.2",
    "robotframework-databaselibrary>=2.4.1",
    "robotframework-imagehorizonlibrary>=1.0",
    "robotframework-jsonlibrary>=0.5",
    "robotframework-requests>=0.9.7",
    "rpaframework>=31.2.0",
    "rpaframework-recognition>=7.0.2",
]
